2002-08-29 John Fleck <jfleck@inkstain.net>

	* about.c
	fixing #92056

2002-08-29  Glynn Foster  <glynn.foster@sun.com>

	* gnome-system-log-security.in: Default session to true, so that
	user can run it when console helper is enabled. Another fix from
	Frederic.

2002-08-29  Glynn Foster  <glynn.foster@sun.com>

	* actions.c: (apply_actions): Fix another case of 'logview'. [sigh]

2002-08-29  Glynn Foster  <glynn.foster@sun.com>

	* gnome-system-log-security.in: Point to gnome-system-log instead
	of logview. Thanks to Frederic for pointing this out.

2002-08-09  Glynn Foster  <glynn.foster@sun.com>

        * gnome-system-log.1: Update man page.

2002-08-02  Deepa Natarajan  <deepa.natarajan@wipro.com>

	* logview.c: Remove some StubCall (), modify the ordering 
	of menu items as 'Save As' entry has been removed. 
	Fixes bug #89685.

2002-07-31  Glynn Foster  <glynn.foster@sun.com>

	* logview.c: Remove StubCall ()
	* logview.h: ditto
	* menus.c: (AddMenu): Remove 'Save As' entry in the menus
	as it's not used. Fixes #89483.

2002-07-31  Glynn Foster  <glynn.foster@sun.com>

	* logview.c: s/About.../About. Fixes #89481.

2002-07-26  Deepa Natarajan  <deepa.natarajan@wipro.com>

	* log_repaint.c, logrtns.c, logview.h: When logview first 
	comes up set focus on the last row and scroll to that row. 
	Always maintain the last focused line. Fixes bug #87398.

2002-07-25  Deepa Natarajan  <deepa.natarajan@wipro.com>

	* logview.[ch], log_repaint.c: Maintain the correct status
	of expanded rows when switching between logs.
	Partly Fixes #87398.

2002-07-24  Deepa Natarajan  <deepa.natarajan@wipro.com>

	* actions.c: Pass the command to execute twice for execlp (),
	so that the action happens. Fixes bug# 88207.

2002-07-17  Deepa Natarajan  <deepa.natarajan@wipro.com>

	* logview.c: Add menu item Close All - to close all the log
	files in one shot.

2002-07-08  Laavanya K R <laavanya.gopalan@wipro.com>

	* actions.c: Modified exec_action_in_db() to execute "action"