@@ -95,14 +95,21 @@ enum {
 GnomeUIInfo log_menu[] = {
 	GNOMEUIINFO_MENU_OPEN_ITEM(LoadLogMenu, NULL),
 	GNOMEUIINFO_SEPARATOR,
-	GNOMEUIINFO_MENU_NEW_ITEM (N_("S_witch Log"), 
-				N_("Switch log"), 
-				change_log_menu, 
-				NULL),
-	GNOMEUIINFO_MENU_NEW_ITEM (N_("_Monitor..."), 
-				N_("Monitor Log"), 
-				MonitorMenu, 
-				NULL),
+    { GNOME_APP_UI_ITEM, N_("S_witch Log"),
+			 N_("Switch between already opened logs"),
+			 change_log_menu,
+			 NULL, NULL,
+			 GNOME_APP_PIXMAP_NONE, NULL,
+			 'N', GDK_CONTROL_MASK, NULL },
+
+    { GNOME_APP_UI_ITEM, N_("_Monitor..."),
+			 N_("Monitor Logs"),
+		         MonitorMenu,
+			 NULL,
+			 NULL,
+			 GNOME_APP_PIXMAP_NONE, NULL,
+			 'M', GDK_CONTROL_MASK, NULL },
+ 
 	GNOMEUIINFO_SEPARATOR,
     { GNOME_APP_UI_ITEM, N_("_Properties"), 
 				N_("Show Log Properties"), 
