@@ -1,7 +1,12 @@
+2002-09-06  Glynn Foster  <glynn.foster@sun.com>
+
+	* logview.c: Remove conflict for menu accelerators. Also get
+	rid of silly stock icons in File menu that don't make sense. Fixes
+	#92540.
+
 2002-08-29 John Fleck <jfleck@inkstain.net>
 
-	* about.c
-	fixing #92056
+	* about.c: fixing #92056 to remove 'Linux' only references.
 
 2002-08-29  Glynn Foster  <glynn.foster@sun.com>
 
